nginx-sample/nginx-stack-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: nginx
spec:
  selector:
    matchLabels:
      run: nginx
  replicas: 3
  template:
    metadata:
      labels:
        run: nginx
    spec:
      containers:
      - name: nginx
        image: nginxinc/nginx-unprivileged
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: svc-nginx
  labels:
    run: svc-nginx
spec:
  ports:
  - name: nginx-https
    port: 80
    protocol: TCP
    targetPort: 443
  selector:
    run: nginx
status:
  loadBalancer: {}
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: route-nginx
spec:
  host: nginx-stack.sapura.com.my
  to:
    kind: Service
    name: svc-nginx
    weight: 100
  port:
    targetPort: nginx-https
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
